test_regress/t/t_order_blkandnblk_bad.out
%Error-BLKANDNBLK: t/t_order_blkandnblk_bad.v:18:21: Unsupported: Blocked and non-blocking assignments to same variable: 't.array'
   18 |    logic [1:0][3:0] array;
      |                     ^~~~~
                   t/t_order_blkandnblk_bad.v:20:25: ... Location of blocking assignment
   20 |    always_comb array[0] = i;
      |                         ^
                   t/t_order_blkandnblk_bad.v:23:15: ... Location of nonblocking assignment
   23 |      array[1] <= array[0];
      |               ^~
                   ... For error description see https://verilator.org/warn/BLKANDNBLK?v=latest
%Error: Exiting due to
